--- a/usuarios.css
+++ b/usuarios.css
@@ -190,14 +190,7 @@ img {
     width: 100%;
     margin-bottom: 10px;
 }
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 10%;
-    box-shadow: 0px 5px 4px 3px rgba(0, 0, 0, 0.3);
-    margin-bottom: 20px;
-}
+
 h1 {
     color: royalblue;
     text-transform: uppercase;
@@ -278,10 +271,8 @@ p {
 }
 
 .modal-carrito {
-    position: absolute !important;
-   
     background-color: white;
-    min-width: 500px;
+    min-width: 300px;
     padding: 20px;
     margin-top: -100%;
     transition: all .5s;
@@ -357,4 +348,11 @@ p {
     .img-galeria{
         width: 95%;
     }
+}
+
+
+.carrito{
+    position: fixed;
+    top: calc(10% - 40px);
+    right: calc(13% - 40px);
 }
